--- a/lakefile.toml
+++ b/lakefile.toml
@@ -1,7 +1,7 @@
-name = "liq_lean_policy"
+name = "pass_wallet_models"
 version = "0.1.0"
 keywords = ["math"]
-defaultTargets = ["LiqLeanPolicy"]
+defaultTargets = ["PassWalletModels"]
 
 [leanOptions]
 pp.unicode.fun = true # pretty-prints `fun a ↦ b`
@@ -12,4 +12,4 @@ name = "mathlib"
 scope = "leanprover-community"
 
 [[lean_lib]]
-name = "LiqLeanPolicy"
+name = "PassWalletModels"
